# legal-ai-backend

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: dependencies.py
app/api/routes/: auth.py  chat.py  documents.py  history.py
app/core/: agent_catalog.py  config.py  database.py  document_catalog.py  llm.py  security.py  utils.py
app/schemas/: auth.py  chat.py  documents.py
